--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -140,3 +140,33 @@ jobs:
 
     - name: Run E2E integration tests
       run: npm run test:e2e
+
+  security-scan:
+    needs: build
+    runs-on: ubuntu-latest
+    continue-on-error: true
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Use Node.js 18.x
+      uses: actions/setup-node@v4
+      with:
+        node-version: 18.x
+        cache: 'npm'
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Run npm audit for vulnerabilities
+      run: npm audit --audit-level moderate --production
+
+    - name: Check for critical vulnerabilities
+      run: |
+        if npm audit --audit-level critical --production --json | jq -e '.vulnerabilities | length > 0' > /dev/null; then
+          echo "⚠️ Critical vulnerabilities found"
+          npm audit --audit-level critical --production
+          exit 1
+        else
+          echo "✅ No critical vulnerabilities found"
+        fi
